Added docker-compose script and 1.11.6 platform.